--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet"  href="">
+    <link rel="stylesheet"  href="styles.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="navbar_container">
+            <a href="/" id="navbar__logo">NEXT</a>
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a href="/" class="navbar__links"> Home </a> 
+                    <!-- I can also leave image refs n stuff-->
+                </li>
+                <li class="navbar__item">
+                    <a href="/tech.html" class="navbar__links"> Tech </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
