tbh i have no idea what I'm doing

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -21,7 +21,13 @@
                     <!-- I can also leave image refs n stuff-->
                 </li>
                 <li class="navbar__item">
-                    <a href="/tech.html" class="navbar__links"> Tech </a>
+                    <a href="/tech.html" class="navbar__links"> Experience </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="/" class="navbar__links"> Products </a>
+                </li>
+                <li class="navbar__btn">
+                    <a href="/" class="button"> Click Me! </a>
                 </li>
             </ul>
         </div>
